# pixel_sum

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Common.h  PixelSum.cpp  PixelSum.h  PixelSumTest.cpp  README.md  TestUtility.h  TimeUtility.h
.github/workflows/: ci.yml
include/pixel_sum/: PixelSum.h  PixelSum.hpp
src/: PixelSum.cpp  pixel_sum.cpp
tests/: PixelSumTest.cpp  pixel_sum_test.cpp
tests/support/: Common.h  TestUtility.h  TestUtility.hpp  TimeUtility.h  TimeUtility.hpp  test_utility.hpp  time_utility.hpp
